# wavm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
docs/: book.toml
docs/src/: SUMMARY.md  bool.md  intro.md  jumps.md  math.md  memory.md  misc.md  opcodes.md
src/: compiler.rs  language.rs  main.rs  tests.rs
src/vm/: arithmetic.rs  boolean.rs  jumps.rs  load.rs  memory.rs  mod.rs  moove.rs  tests.rs
src/vm/tests/: arithmetic.rs  boolean.rs  jumps.rs  memory.rs  mod.rs  opcodes.rs
